[gd_scene load_steps=7 format=3 uid="uid://be2i1xlj1o41s"]

[ext_resource type="Script" uid="uid://bc8pni3x8aa43" path="res://scripts/mobile_controls.gd" id="1_k8ypl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8ypl"]
bg_color = Color(0.2, 0.2, 0.2, 0.5)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7u83"]
bg_color = Color(0.5, 0.7, 1, 0.8)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yoks"]
bg_color = Color(1, 0.5, 0.2, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rjyr"]
bg_color = Color(0.5, 0.8, 1, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1te1"]
bg_color = Color(0.3, 1, 0.3, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MobileControls" type="CanvasLayer"]
layer = 100
script = ExtResource("1_k8ypl")

[node name="JoystickBase" type="Control" parent="."]
custom_minimum_size = Vector2(160, 160)
layout_mode = 3
anchors_preset = 0

[node name="BasePanel" type="Panel" parent="JoystickBase"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k8ypl")

[node name="JoystickKnob" type="Panel" parent="JoystickBase"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_l7u83")

[node name="AbilityButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Ability1" type="Button" parent="AbilityButtons"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_5yoks")
text = "1"

[node name="Ability2" type="Button" parent="AbilityButtons"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_4rjyr")
text = "2"

[node name="ItemButton" type="Button" parent="."]
custom_minimum_size = Vector2(70, 70)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_y1te1")
text = "E"
